[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stltimelogger"
description = "cli time logger"

readme = "README.rst"

authors = [
    {name = "pavelsof", email = "mail@pavelsof.com"},
]

license = {file = "LICENCE"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["cli", "time", "logger"]

dynamic = ["version"]

[project.urls]
Home = "https://github.com/pavelsof/stl"

[project.scripts]
stl = "stl.cli:main"

[tool.flit.module]
name = "stl"
